# pompompurin-ai-toolkit

./: .gitignore  AI_ACCELERATION.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  DEVELOPER_ADOPTION.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
PRPs/: task-api-contract.md  task-api-core.md  task-api-debug.md  task-api-onboarding.md  task-api-planning.md
task-api/: PRP_VALIDATION_REPORT.md  README.md  requirements.txt  test_api_comprehensive.py
task-api/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
task-api/app/routers/: auth.py  tasks.py
task-api/tests/: conftest.py  test_auth.py
templates/: Dockerfile.modern  docker-compose.modern.yml
templates/.devcontainer/: devcontainer.json  post-create.sh
