[project]
name = "pompompurin-ai-toolkit"
version = "1.0.0"
description = "ðŸ® PompomPurin's AI Engineering Toolkit - Sweet AI-assisted development with PRP methodology"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "pytest-cov>=4.1.0"
]

[project.urls]
Homepage = "https://github.com/pompompurin/pompompurin-ai-toolkit"
Repository = "https://github.com/pompompurin/pompompurin-ai-toolkit"
Issues = "https://github.com/pompompurin/pompompurin-ai-toolkit/issues"
Documentation = "https://github.com/pompompurin/pompompurin-ai-toolkit#readme"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "task-api/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=app --cov-report=term-missing"
